random updates from sally and shawn tweaks to animations

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           Delete User
         </button>
         <h4>Destruction Icon</h4>
-        <button type="button" name="button" class="c--destruction icon">
+        <button type="button" name="button" class="c--destruction a--destruction-ico icon">
         </button>
         <h4>Disabled</h4>
         <button type="button" name="button" disabled="" class="c--disabled">Disabled</button>
@@ -27,7 +27,7 @@
         <button type="button" name="button" class="icon c--continue">Continue </button>
         <h4>Navigational &ndash; Pagination</h4>
         <nav>
-          <a href="#" class="c--pag-back icon"></a><a href="#" class="c--pag-current">1</a><a href="#" class="c--pag-forward icon"></a>
+          <a href="#" class="c--pag-back icon"></a><a href="#" class="c--pag-current">1</a><a href="" class="a--pag-num">2</a><a href="" class="a--pag-num">3</a><a href="#" class="c--pag-forward icon"></a>
         </nav>
         <h4>Text Links</h4>
         <a href="#">Linky link</a><br><br>
@@ -53,7 +53,7 @@
           Delete User
         </button>
         <h4>Destruction Icon</h4>
-        <button type="button" name="button" class="c--destruction icon">
+        <button type="button" name="button" class="c--destruction a--destruction-ico icon">
         </button>
         <h4>Disabled</h4>
         <button type="button" name="button" disabled="" class="c--disabled">Disabled</button>
@@ -61,7 +61,7 @@
         <button type="button" name="button" class="icon c--continue">Continue </button>
         <h4>Navigational &ndash; Pagination</h4>
         <nav>
-          <a href="#" class="c--pag-back icon"></a><a href="#" class="c--pag-current">1</a><a href="#" class="c--pag-forward icon"></a>
+          <a href="#" class="c--pag-back icon"></a><a href="#" class="c--pag-current">1</a><a href="" class="a--pag-num">2</a><a href="" class="a--pag-num">3</a><a href="#" class="c--pag-forward icon"></a>
         </nav>
         <h4>Text Links</h4>
         <a href="#">Linky link</a><br><br>
