updates for animations timesing more!

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <button type="button" name="button" class="c--destruction a--destruction-ico icon">
         </button>
         <h4>Disabled</h4>
-        <button type="button" name="button" disabled="" class="c--disabled">Disabled</button>
+        <button type="button" name="button" disabled="" class="c--disabled">Disabled <i>please preform the following tasks to enable this button</i></button>
         <h4>Navigational &ndash; Continue</h4>
         <button type="button" name="button" class="icon c--continue">Continue </button>
         <h4>Navigational &ndash; Pagination</h4>
