--- a/index.html
+++ b/index.html
@@ -77,6 +77,40 @@
           </span>
         </dl>
       </section>
+      <section class="l--grid-half set-3">
+        <h4>Main CTA</h4>
+        <button type="button" name="button" class="c--cta">Main CTA</button>
+        <h4>Secondary</h4>
+        <button type="button" name="button">Secondary Button</button>
+        <h4>Destruction</h4>
+        <button type="button" name="button" class="c--destruction icon">
+          Delete User
+        </button>
+        <h4>Destruction Icon</h4>
+        <button type="button" name="button" class="c--destruction a--destruction-ico icon">
+        </button>
+        <h4>Disabled</h4>
+        <button type="button" name="button" disabled="" class="c--disabled">Disabled <i>please preform the following tasks to enable this button</i></button>
+        <h4>Navigational &ndash; Continue</h4>
+        <button type="button" name="button" class="icon c--continue">Continue </button>
+        <h4>Navigational &ndash; Pagination</h4>
+        <nav>
+          <a href="#" class="c--pag-back icon"></a><a href="#" class="c--pag-current">1</a><a href="" class="a--pag-num">2</a><a href="" class="a--pag-num">3</a><a href="#" class="c--pag-forward icon"></a>
+        </nav>
+        <h4>Text Links</h4>
+        <a href="#">Linky link</a><br><br>
+        <a href="#" class="c--destruction">Delete</a><br><br>
+        <a href="#" class="c--nav-back icon">Back to Login</a><br><br>
+        <dl class="c--dropdown">
+          <input type="checkbox" class="a--dropdown-checkbox">
+          <dt><a class="icon a--dropdown-trigger">Dropdown</a></dt>
+          <span class="a--dropdown-content">
+            <dd><a>Item 1</a></dd>
+            <dd><a>Item 2</a></dd>
+            <dd><a>Item 3</a></dd>
+          </span>
+        </dl>
+      </section>
     </main>
   </body>
 </html>
